--- a/pages/p8/959326.md
+++ b/pages/p8/959326.md
@@ -1,4 +1,4 @@
-### 川普孤军奋战 台湾急着表态(图)
+### 虚胖的黄尾鸲(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,12 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/11-21/p2822722a76829794-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="张易书 黄尾鸲 黑枕蓝鹟 蓝矶鸫" src="https://img3.secretchina.com/pic/2021/1-16/p2858623a492057616-ss.jpg"/>
   <br>
-   作者认为，现今川普所打的这场硬仗，绝不止是总统大位，更是在意识的斗争中，牵动着人类未来的命运！（图片来源：示意图／民报资料照）
+   <strong>
+    （文／摄影：张易书）
+   </strong>
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,38 +31,34 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月22日讯】最该相信奇迹的
-  <span href="https://www.secretchina.com/news/gb/tag/台湾" target="_blank">
-   台湾
-  </span>
-  却在美国人民百万大游行挺川并反选举舞弊的同时，发出了支持拜登——也就是极左共产主义的同路人的正式声明！真教我这个生自台湾的情何以堪！
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/黄尾鸲" target="_blank">
+    黄尾鸲
+   </span>
+  </strong>
+  ，虚胖，新光国中。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  要不是
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
+  很常看到这种蓬得一塌糊涂、蓬得无以复加、蓬得肚子奇大、蓬到觉得他是在学我……
+ </p>
+ <p>
+  <span href="https://zh.wikipedia.org/wiki/%E9%BB%83%E5%B0%BE%E9%B4%9D">
+   黄尾鸲
   </span>
-  ，台湾能在瘟疫肆虐下还有傲世的经济成长？要不是川普，台湾能在中共穷凶恶极地张牙舞爪下，得以安居乐业？
+  最近总是让人在走廊时，瞧见他休息时才“蓬得一塌糊涂、蓬到哎呀我的妈呀！”的身影。
  </p>
  <p>
-  在川普为普世价值孤军奋战之际，不思回报相助，反而反咬一口！说难听了，简直无耻！
+  虚胖让人觉得他可爱，但观察多回，也知道蓬羽装胖是虚胖，大多数时候的黄尾鸲，还是属于瘦瘦精练的样子，就像我常跟假日班的那些孩子说，会考就是抽干的海水，水涨的时候，你夸说自己多蓬就有多蓬，但是会考（或是会考的前哨战模考）一来，海水咻∼的抽干，你身上剩下几A、几+的肉？假日班的羽毛也掩护不了你。
  </p>
  <p>
-  我深知，小英政府不代表大多数民意。但政府言论关乎台湾全体人民的安危与福祉，作为海外台人，我不得不问：
+  带着好玩的心情，看待着蓬蓬羽毛的黄尾鸲，这是种消遣，但可别把自己活成总是蓬羽的人，
  </p>
- <p>
-  1.台湾政府恭贺拜登当选，就已是政治表态，请问站在拜登这位与中共剪不断理还乱的一边，对台湾前途有利？
- </p>
- <p>
-  2.在川普团队还在大打选战官司，
-  <span href="https://www.secretchina.com/news/gb/tag/美国大选" target="_blank">
-   美国大选
-  </span>
-  还没正式结束之际，就轻易地相信拜登团队与主流媒体片面宣称当选，而唐突冒然地选边，只显示：a.政府团队对讯息掌握与研判的贫乏与失准；b.小英本人缺乏对局势走向的洞见与贯彻信念的魄力。小英向来不以此见长，因此远远不及前李总统的胸襟与眼光。他在台湾情势比目前更为危急严峻之时，提出“戒急用忍”，从而开拓了台美日中的另一番格局，奉劝小英及其政府团队好好深思其中妙意！
+ <p style="text-align: center;">
+  <img alt="" src="https://img3.secretchina.com/pic/2021/1-16/p2858622a384410244-ss.jpg"/>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -75,7 +73,12 @@
   </div>
  </center>
  <p>
-  亲爱的台湾人民，
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/黑枕蓝鹟" target="_blank">
+    黑枕蓝鹟
+   </span>
+  </strong>
+  说：作文改完了？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -90,7 +93,7 @@
   </div>
  </center>
  <p>
-  千万不要被主流媒体与社交网络媒体所困惑，台湾从红色渗透与选举舞弊的经验足以警醒人民的觉察！川普所对抗的是远为诡谲复杂的情势，因为美国毕竟是世界第一大国，其中的利益牵扯千头万绪，而今在诸多真相被不断揭露之际，台湾人民所该做的，是谨守内心的道德底限，静观大选的结局，然后选择。
+  早上阴天，刚好衬托着模拟考作文待改的心情，但“不见黄河不掉泪、怎敌山景好妩媚”的相叠心情，还是让我鸵鸟般的早上与下午，都走了一趟步道，各6公里，总里程超过12公里，关于改作文，那是晚上的事情了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -105,7 +108,7 @@
   </div>
  </center>
  <p>
-  我可以自信地预言，川普必胜，拜登必败！君不见美国才举行的百万游行所反应的民意?！更遑论愈来愈多的真相被不断揭露，其中钱权纠葛，令人哑口结舌，水深如海的绵密网络，也叫人瞠目摇头。所以川普所打的这场硬仗，绝不止是总统大位，更是在意识的斗争中，牵动着人类未来的命运！
+  或许上天要点醒我作文还没改，上午遇到一场雨，尽管只有几分钟时间，但山雨是一种狂暴式的喧哗，穿林打叶声，风骤竹林啸，我没有带伞，但有宽帽与风衣，走在落雨的山迳，我没有停下脚步，没有加快，也没有躲雨，因为云层不厚告诉我，这就是几分钟的浇淋而已。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -120,7 +123,7 @@
   </div>
  </center>
  <p>
-  台湾，不得不选边，不仅是因为撮尔岛国，过河小卒，更是为了每个个体的自身前途。
+  午食煮面之后，又赶着下午场的步道，上天要探究我到底冥顽到何种境界，又来一场雨，上午都不怕了，下午当然更无须惊，就是雨嘛，七号步道很友善，不同小山头都有着自己的微气候，过了小山头，雨就变成了风，风就让叶子变成提醒，提醒赶快下山，还要准备晚餐与改作文。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -139,7 +142,26 @@
   </ins>
  </center>
  <p>
-  自由与桎梏，民主与专制，这选择应是清楚的。川普与拜登，前者与后者，这区别也应是清楚的。
+  不知道为什么，改作文的时候，脑中一直想着黑枕蓝鹟，在目睹几十篇惨烈的文字排列组合之后，我想我是真的需要透过整理
+  <span href="https://zh.wikipedia.org/wiki/%E9%BB%91%E6%9E%95%E7%8E%8B%E9%B6%B2">
+   黑枕蓝鹟
+  </span>
+  的照片，来让脑子，回到青鸟就在你身边的正向感。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="" src="https://img3.secretchina.com/pic/2021/1-16/p2858621a98872406-ss.jpg"/>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -154,7 +176,15 @@
   </div>
  </center>
  <p>
-  川普在2016年打赢了一场不可能的选战，执政4年，信守承诺，在惊涛骇浪的诡变世局中，纵横裨合，能攻能守，交出亮眼的经济外交成绩，具有千夫所指吾亦往也的洞察与魄力。川普真英雄也。
+  无须踏入荒野，只须持续在新光校园漫游；甚至无须漫游，只须单纯守候一株落羽松；甚至无须守候，只须练习现代人已经不习惯的等待；最后可能也无须等待，只须遇上一种偶然，来自
+  <span href="https://zh.wikipedia.org/wiki/%E8%A5%BF%E4%BC%AF%E5%88%A9%E4%BA%9A">
+   西伯利亚
+  </span>
+  南部、东北的
+  <strong>
+   蓝矶鸫
+  </strong>
+  ，就会栖落在落羽松上，看着你不经心的洗手、恍神的压着饮水机。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -169,54 +199,15 @@
   </div>
  </center>
  <p>
-  台湾人民，
-  <br>
-   在你们参与的各种街头抗议中，你们最了解什么叫做不作沉默的大众！千万不要以为美国大选不关己事，大大相关。
-   <br>
-    它关系这全体人类的命运！
-    <br>
-     如果你作了选择，请不要沉默！至少发声，让你的政府知道你的选择。
-     <br>
-      我对台湾人民理性选择的信心还是有的！
-     </br>
-    </br>
-   </br>
-  </br>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- (文章仅代表作者个人立场和观点)
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
+  周末时，从大坑步道赶下山来，想欣赏我的个谈小弟炫耀的“篮球神技”，步道走得太慢，赶路太蜗牛，到学校时比赛已散场，只剩下办公室外的
+  <span href="https://zh.wikipedia.org/wiki/%E8%90%BD%E7%BE%BD%E6%9D%89">
+   落羽松
   </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
+  ，
+  <span href="https://zh.wikipedia.org/wiki/%E8%93%9D%E7%9F%B6%E9%B8%AB">
+   蓝矶鸫
   </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+  、羽蓬蓬、看我瞎忙一场，在风中。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -229,6 +220,44 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:朱泥
+来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41Z0"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -246,13 +275,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/953340.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/953340.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/953340.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/22/953340.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/959326.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/959326.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/959326.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/17/959326.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/953340.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/959326.md' width='0px' height='0px'/>
