--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -116109,4 +116109,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01180201)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01180251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
