--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -116253,4 +116253,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01190201)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01190251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
