--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -116454,4 +116454,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01201151)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01201201)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
