--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -116460,4 +116460,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01201251)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01201301)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
